--- a/apps/Manager/views/projects/categories.phtml
+++ b/apps/Manager/views/projects/categories.phtml
@@ -5,11 +5,20 @@
   </div>
 
   <div class="row">
+    <div class="col-md-12">
+      <div class="alert hidden" role="alert">
+        <h4 id="title"></h4>
+        <p id="desc"></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-md-2">
       <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
       <hr class="sm">
       <button type="button" class="btn btn-success btn-block " data-toggle="modal" data-target="#create">
-        <span class="fa fa-plus"></span> Cadastrar
+        <span class="fa fa-plus"></span> Adicionar Categoria
       </button>
       <hr class="sm">
       <div class="panel panel-default">
@@ -17,7 +26,6 @@
         <div class="panel-body no-padd">
           <div class="list-group no-margn mail-nav">
             <a href="/projects" class="list-group-item">Projetos Cadastrados</a>
-            <a href="/projects/create" class="list-group-item">Cadastrar Projeto</a>
             <a href="/projects/categories" class="list-group-item on">Categorias</a>
           </div>
         </div>
@@ -26,7 +34,7 @@
 
     <div class="col-md-10">
       <div class="panel panel-default table-responsive">
-        <table class="table table-striped no-margn">
+        <table class="table table-striped table-hover no-margn">
             <thead>
               <tr>
                 <th>Categoria</th>
@@ -38,14 +46,12 @@
                 <tr data-searchable >
                   <td><?php echo $c->title; ?></td>
                   <td>
-                    <div class="pull-right">
-                      <button type="button" class="btn btn-info" data-toggle="modal" data-target="#edit" data-form-action="/team/departments/update/<?php echo $d->_ ;?>">
-                        <span class="fa fa-pencil"></span>
-                      </button>
-                      <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#remove" data-form-action="/team/departments/remove/<?php echo $d->_ ;?>">
-                        <span class="fa fa-close"></span>
-                      </button>
-                    </div>
+                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#edit" data-form-action="/projects/update/category/<?php echo $c->_ ;?>">
+                      <span class="fa fa-pencil"></span>
+                    </button>
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#remove" data-form-action="/projects/remove/category/<?php echo $c->_ ;?>">
+                      <span class="fa fa-close"></span>
+                    </button>
                   </td>
                 </tr>
               <?php endforeach; ?>
@@ -64,18 +70,19 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="labl">Cadastro</h4>
+        <h4 class="modal-title" id="labl">Cadastrar Categoria</h4>
       </div>
 
-      <form role="form" method="post" accept-charset="utf8" action="/team/departments/new" class="validator-form" >
+      <form role="form" method="post" accept-charset="utf8" action="/projects/new/category" class="validator-form" >
         <div class="modal-body">
-          <div class="alert hidden" role="alert">
+          <div class="alert hidden" role="alert" id="alertBox">
             <h4 id="title"></h4>
             <p id="desc"></p>
           </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Título:</label>
-
+              <label for="exampleInputEmail1">Título da Categoria:</label>
+              <?php echo $form->render("security"); ?>
+              <?php echo $form->render("category"); ?>
             </div>
         </div>
         <div class="modal-footer">
@@ -92,18 +99,19 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabell">Alteração</h4>
+        <h4 class="modal-title" id="myModalLabell">Alterar Categoria</h4>
       </div>
 
       <form role="form" method="post" accept-charset="utf8" action="/team/departments/" class="validator-form" data-dynamic-action >
         <div class="modal-body">
-          <div class="alert hidden" role="alert">
+          <div class="alert hidden" role="alert" id="editBox">
             <h4 id="title"></h4>
             <p id="desc"></p>
           </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Título:</label>
-
+              <label for="exampleInputEmail1">Novo Título:</label>
+              <?php echo $form->render("security"); ?>
+              <?php echo $form->render("category"); ?>
             </div>
         </div>
         <div class="modal-footer">
@@ -126,13 +134,14 @@
       <form role="form" method="post" accept-charset="utf8" action="/team/remove/" class="validator-form" data-dynamic-action >
         <div class="modal-body">
 
-          <div class="alert alert-info" role="alert">
+          <div class="alert alert-info" role="alert" id="removeBox">
             <h4 id="title">Atenção!</h4>
-            <p id="desc">É necessário selecionar outro departamento para que os membros de equipe cadastrados sejam aterados.</p>
+            <p id="desc">É necessário selecionar outra categoria para que os projetos cadastrados no mesmo sejam aterados.</p>
           </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Departmentos:</label>
-
+              <label for="exampleInputEmail1">Categorias:</label>
+              <?php echo $form->render("security"); ?>
+              <?php echo $form->render("categories"); ?>
             </div>
         </div>
         <div class="modal-footer">
