--- a/apps/Manager/views/projects/categories.phtml
+++ b/apps/Manager/views/projects/categories.phtml
@@ -16,11 +16,11 @@
   <div class="row">
     <div class="col-md-2">
       <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
-      <hr class="sm">
-      <button type="button" class="btn btn-success btn-block " data-toggle="modal" data-target="#create">
+      <hr class="dotted">
+      <button type="button" class="btn btn-success btn-block btn-circle" data-toggle="modal" data-target="#create">
         <span class="fa fa-plus"></span> Adicionar Categoria
       </button>
-      <hr class="sm">
+      <hr class="dotted">
       <div class="panel panel-default">
         <div class="panel-heading clean">Navegação</div>
         <div class="panel-body no-padd">
