--- a/apps/Manager/views/team/index.phtml
+++ b/apps/Manager/views/team/index.phtml
@@ -16,8 +16,6 @@
 
   <div class="row">
     <div class="col-md-2">
-      <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
-      <hr class="sm">
       <div class="panel panel-default">
         <div class="panel-heading clean">Navegação</div>
         <div class="panel-body no-padd">
@@ -32,6 +30,13 @@
 
     <div class="col-md-10">
       <div class="panel panel-default table-responsive">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-md-12">
+              <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
+            </div>
+          </div>
+        </div>
         <table class="table table-striped no-margn">
             <thead>
               <tr>
