--- a/apps/Manager/views/projects/categories.phtml
+++ b/apps/Manager/views/projects/categories.phtml
@@ -15,8 +15,6 @@
 
   <div class="row">
     <div class="col-md-2">
-      <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
-      <hr class="dotted">
       <button type="button" class="btn btn-success btn-block btn-circle" data-toggle="modal" data-target="#create">
         <span class="fa fa-plus"></span> Adicionar Categoria
       </button>
@@ -34,6 +32,13 @@
 
     <div class="col-md-10">
       <div class="panel panel-default table-responsive">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-md-12">
+              <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
+            </div>
+          </div>
+        </div>
         <table class="table table-striped table-hover no-margn">
             <thead>
               <tr>
