--- a/apps/Manager/views/tickets/index.phtml
+++ b/apps/Manager/views/tickets/index.phtml
@@ -14,16 +14,22 @@
   </div>
   <hr class="dotted">
   <div class="row">
-    <div class="col-md-2">
-      <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
-      <hr class="sm">
-      <div class="btn-group btn-group-justified">
-        <a role="button" class="btn btn-warning" data-filter="1" >Abertos</a>
-        <a role="button" class="btn btn-warning" data-filter="2" >Concluídos</a>
-      </div>
-    </div>
-    <div class="col-md-10">
+    <div class="col-md-12">
       <div class="panel panel-default table-responsive">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-md-9">
+              <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
+            </div>
+            <div class="col-md-3">
+              <div class="btn-group btn-group-justified">
+                <a role="button" class="btn btn-default" data-filter="1" >Abertos</a>
+                <a role="button" class="btn btn-default" data-filter="2" >Concluídos</a>
+                <!-- <a role="button" class="btn btn-warning" data-filter="3" >Cancelados</a> -->
+              </div>
+            </div>
+          </div>
+        </div>
         <table class="table table-striped no-margn">
             <thead>
               <tr>
