--- a/apps/Manager/views/projects/index.phtml
+++ b/apps/Manager/views/projects/index.phtml
@@ -101,7 +101,7 @@
 
 </div>
 
-<!-- add task -->
+<!-- add project -->
 <div class="modal fade" id="create" tabindex="-1" role="dialog" aria-labelledby="create" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
