--- a/apps/Manager/views/team/index.phtml
+++ b/apps/Manager/views/team/index.phtml
@@ -45,7 +45,7 @@
                 <th>Departamento</th>
                 <th>Email</th>
                 <th>Telefone</th>
-                <th></th>
+                <th><i class="fa fa-cogs"></i></th>
               </tr>
             </thead>
             <tbody>
