--- a/apps/Manager/views/team/index.phtml
+++ b/apps/Manager/views/team/index.phtml
@@ -51,7 +51,7 @@
             <tbody>
               <?php foreach ($members as $member): ?>
                 <tr data-searchable >
-                    <td><img src="/assets/manager/images/avtar/<?php echo $member->image; ?>" alt="<?php echo $member->name; ?>" class="img-circle avtar" /</td>
+                    <td><img src="/assets/manager/images/avtar/<?php echo $member->image; ?>" alt="<?php echo $member->name; ?>" class="img-circle avtar" /></td>
                     <td><?php echo $member->name; ?></td>
                     <td><?php echo $member->department; ?></td>
                     <td><?php echo $member->email; ?></td>
