--- a/apps/Manager/views/clients/create.phtml
+++ b/apps/Manager/views/clients/create.phtml
@@ -144,16 +144,21 @@
 
                   <div class="row">
 
-                    <div class="col-md-3">
+                    <div class="col-md-4">
+                        <label class="control-label">Imagem do Usuário</label>
+                        <div class="form-group has-feedback">
+                          <?php echo $form->render("file"); ?>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
                         <label class="control-label">Nome de Usuário</label>
                         <div class="form-group has-feedback">
                           <?php echo $form->render("username"); ?>
                         </div>
                     </div>
 
-                    <div class="clearfix"></div>
-
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <label class="control-label">Senha de Acesso</label>
                         <div class="form-group has-feedback">
                           <?php echo $form->render("password"); ?>
@@ -306,19 +311,24 @@
 
                 <div class="row">
 
-                  <div class="col-md-3">
-                      <label class="control-label">Nome de Usuário</label>
+                  <div class="col-md-4">
+                      <label class="control-label">Imagem do Usuário</label>
                       <div class="form-group has-feedback">
-                      <?php echo $form->render("username"); ?>
+                        <?php echo $form->render("file"); ?>
                       </div>
                   </div>
 
-                  <div class="clearfix"></div>
+                  <div class="col-md-4">
+                      <label class="control-label">Nome de Usuário</label>
+                      <div class="form-group has-feedback">
+                        <?php echo $form->render("username"); ?>
+                      </div>
+                  </div>
 
-                  <div class="col-md-3">
+                  <div class="col-md-4">
                       <label class="control-label">Senha de Acesso</label>
                       <div class="form-group has-feedback">
-                      <?php echo $form->render("password"); ?>
+                        <?php echo $form->render("password"); ?>
                       </div>
                   </div>
 
