--- a/apps/Manager/views/index/index.phtml
+++ b/apps/Manager/views/index/index.phtml
@@ -66,14 +66,14 @@
       </div>
       <div class="col-md-6">
         <div class="panel panel-default">
-          <div class="panel-heading">Calendar</div>
+          <div class="panel-heading">Deadlines &mdash; Tarefas</div>
           <div class="panel-body">
 
             <div class="panel-heading clean clearfix text-center">
               <div class="btn-group pull-left">
                 <button class="btn btn-default btn-sm" data-calendar-nav="prev"><i class="fa fa-chevron-left"></i></button>
-                <button class="btn btn-sm btn-default" data-calendar-nav="today">Today</button>
-                <button class="btn btn-sm btn-default" data-calendar-nav="next">Next >&gt;</button>
+                <button class="btn btn-sm btn-default" data-calendar-nav="today">Hoje</button>
+                <button class="btn btn-sm btn-default" data-calendar-nav="next"><i class="fa fa-chevron-right"></i></button>
               </div>
               <b class="calender-title"></b>
               <div class="btn-group pull-right">
