--- a/apps/Manager/views/tasks/index.phtml
+++ b/apps/Manager/views/tasks/index.phtml
@@ -70,7 +70,7 @@
                       <?php echo $form->render("security"); ?>
                       <?php if($task->status == 1): ?>
                         <div class="btn-group">
-                          <button type="button" class="btn btn-primary" data-toggle="modal" data-ajax="/task/view/<?php echo $task->_;?>">
+                          <button type="button" class="btn btn-info" data-toggle="modal" data-ajax="/task/view/<?php echo $task->_;?>">
                             <span class="fa fa-info-circle"></span>
                             Info
                           </button>
@@ -85,7 +85,7 @@
                         </div>
                       <?php elseif($task->status == 2): ?>
                         <div class="btn-group">
-                          <button type="button" class="btn btn-primary" data-toggle="modal" data-ajax="/task/view/<?php echo $task->_;?>">
+                          <button type="button" class="btn btn-info" data-toggle="modal" data-ajax="/task/view/<?php echo $task->_;?>">
                             <span class="fa fa-info-circle"></span>
                             Info
                           </button>
