--- a/public/assets/manager/css/app/custom.css
+++ b/public/assets/manager/css/app/custom.css
@@ -125,7 +125,14 @@
   flex-direction: row-reverse;
 }
 
-.chosen-disabled
-{
+.form-control[disabled]{
+  cursor: default !important;
+}
+
+.chosen-disabled .chosen-single {
   font-weight: bold;
+  color: #010101 !important;
+  cursor: default;
+  background-color: #D4D4D4 !important;
+  border: 1px solid #9e9e9e !important;
 }
