--- a/apps/Manager/views/tasks/index.phtml
+++ b/apps/Manager/views/tasks/index.phtml
@@ -15,7 +15,7 @@
 
   <div class="row">
     <div class="col-md-2 col-md-offset-10">
-      <button type="button" class="btn btn-success btn-block btn-circle" data-toggle="modal" data-ajax="/task/create/">
+      <button type="button" class="btn btn-success btn-block btn-circle" data-toggle="modal" data-ajax="/task/create">
         <span class="fa fa-plus"></span> Adicionar Tarefa
       </button>
     </div>
@@ -54,7 +54,7 @@
               <?php foreach($tasks as $task): ?>
                 <tr data-searchable data-filter-index="<?php echo $task->status; ?>" >
                   <td>
-                    <?php $label = ((new \DateTime("now")) > (new \DateTime($task->deadline)) ? "label-danger" : "label-primary"); ?>
+                    <?php $label = ((new \DateTime("now")) <= (new \DateTime($task->deadline)) ? "label-primary" : "label-danger"); ?>
                     <span class="label <?php echo $label; ?>"><?php echo (new \DateTime($task->deadline))->format("d-m-Y"); ?></span>
 
                     <?php if( $task->status == 2 ): ?>
@@ -66,7 +66,7 @@
                   <td><?php echo $task->description; ?></td>
                   <td>
                     <?php $action = ( $task->status == 1 ? 'close' : 'open' ); ?>
-                    <form method="post" class="validator-form" action="/tasks/status/<?php echo "{$action}/{$task->_}"; ?>" novalidate="novalidate">
+                    <form method="post" class="validator-form" action="/task/<?php echo "{$action}/{$task->_}"; ?>" novalidate="novalidate">
                       <?php echo $form->render("security"); ?>
                       <?php if($task->status == 1): ?>
                         <div class="btn-group">
@@ -74,7 +74,7 @@
                             <span class="fa fa-info-circle"></span>
                             Info
                           </button>
-                          <button type="button" class="btn btn-primary" data-toggle="modal" data-ajax="/task/update/<?php echo $task->_;?>">
+                          <button type="button" class="btn btn-primary" data-toggle="modal" data-ajax="/task/modify/<?php echo $task->_;?>">
                             <span class="fa fa-pencil"></span>
                             Editar
                           </button>
@@ -89,7 +89,7 @@
                             <span class="fa fa-info-circle"></span>
                             Info
                           </button>
-                          <button type="button" class="btn btn-primary" data-toggle="modal" data-ajax="/task/update/<?php echo $task->_;?>">
+                          <button type="button" class="btn btn-primary" data-toggle="modal" data-ajax="/task/modify/<?php echo $task->_;?>">
                             <span class="fa fa-pencil"></span>
                             Editar
                           </button>
