--- a/apps/Manager/views/team/index.phtml
+++ b/apps/Manager/views/team/index.phtml
@@ -16,7 +16,7 @@
 
   <div class="row">
     <div class="col-md-2">
-      <button type="button" class="btn btn-success btn-block btn-circle" data-toggle="modal" data-ajax="/team/create/">
+      <button type="button" class="btn btn-success btn-block btn-circle" data-toggle="modal" data-ajax="/team/create">
         <span class="fa fa-plus"></span> Adicionar Membro
       </button>
       <hr class="dotted">
@@ -60,12 +60,20 @@
                     <td><?php echo $member->email; ?></td>
                     <td><?php echo $member->phone; ?></td>
                     <td>
-                      <button type="button" class="btn btn-info" data-toggle="modal" data-ajax="/team/modify/<?php echo $member->uid ;?>">
-                        <span class="fa fa-pencil"></span>
-                      </button>
-                      <button type="button" class="btn btn-danger" data-toggle="modal" data-ajax="/team/remove/<?php echo $member->uid ;?>">
-                        <span class="fa fa-close"></span>
-                      </button>
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-ajax="/team/view/<?php echo $member->uid ;?>">
+                          <span class="fa fa-info-circle"></span>
+                          Info
+                        </button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-ajax="/team/modify/<?php echo $member->uid ;?>">
+                          <span class="fa fa-pencil"></span>
+                          Editar
+                        </button>
+                        <button type="button" class="btn btn-danger" data-toggle="modal" data-ajax="/team/remove/<?php echo $member->uid ;?>">
+                          <span class="fa fa-close"></span>
+                          Remover
+                        </button>
+                      </div>
                     </td>
                 </tr>
               <?php endforeach; ?>
@@ -78,33 +86,4 @@
   </div>
 </div>
 
-<!-- confirm -->
-<div class="modal fade" id="confirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Confirmação</h4>
-      </div>
-
-      <form role="form" method="post" accept-charset="utf8" action="/team/remove/" class="validator-form" data-dynamic-action >
-        <div class="modal-body">
-
-          <div class="alert alert-info" role="alert">
-            <h4 id="title">Atenção!</h4>
-            <p id="desc">É necessário selecionar outro membro para assumir responsabilidade de todos os projetos relacionados ao membro a ser removido.</p>
-          </div>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Membros:</label>
-              <?php echo $form->render("select"); ?>
-              <?php echo $form->render("security"); ?>
-            </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-          <button type="submit" class="btn btn-primary">Confirmar</button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
+<div id="modal-results"></div>
